[gd_scene load_steps=4 format=3 uid="uid://ck40ohs01c3e1"]

[ext_resource type="PackedScene" uid="uid://cfakfcxv3v857" path="res://scenes/components/time_console/time_console.tscn" id="1_jdxlq"]
[ext_resource type="Script" uid="uid://om7fm6kdwtfi" path="res://scenes/game_screens/baby_scene/baby_scene.gd" id="1_otobn"]
[ext_resource type="PackedScene" uid="uid://nym5twbhmskj" path="res://scenes/components/stats_console/stats_console.tscn" id="2_lggpp"]

[node name="BabyScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otobn")

[node name="TimeConsole" parent="." instance=ExtResource("1_jdxlq")]
layout_mode = 1
offset_right = 749.0
offset_bottom = 104.0

[node name="StatsConsole" parent="." instance=ExtResource("2_lggpp")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -228.0
offset_bottom = 300.0
grow_horizontal = 0

[node name="ActivityContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
